--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="覃炳耀">
+    <title>覃炳耀的个人主页</title>
+    <style type="text/css">
+        #time{
+            color: black;
+            text-align: right;
+        }
+        .snow{
+            background: white;
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+        }
+    </style>
+</head>
+<body>
+    <script>
+        //获取屏幕宽高
+        var windowWidth = window.screen.width;
+        var windowHeight = window.screen.height;
+
+        //创建雪花
+        function createSnow(){
+            var left = 0;
+            var top = 0;
+
+            //定义一个初始化随机数,使雪花在屏幕中
+            var left_random = Math.random() * windowWidth;
+            var top_random = Math.random()* windowHeight;
+            var div = document.createElement('div');
+            div.className = 'snow';
+            div.style.transform = 'scale('+(Math.random())+')'
+
+            document.body.appendChild(div);
+
+            //雪花飘落
+            setInterval(function () {
+
+                div.style.left = left_random + left +'px';
+                div.style.top = top_random + top +'px'
+                left += 0.2;
+                top += 0.2;
+
+                //如果雪花跑到屏幕外面了,让雪花重新返回屏幕顶部
+                if(left_random + left >= windowWidth){
+                    left_random = Math.random();
+                    left = 0;
+                }
+
+                if(top_random + top >= windowHeight){
+                    top_random = Math.random();
+                    top = 0;
+                }
+            },10)
+
+        }
+        for(var i = 0 ; i < 200 ; i++){
+            createSnow()
+        }
+    </script>
+
+    <h1 id="time"></h1>
+    <script type="text/javascript" >
+        setInterval(function(){
+            clock=new Date();
+            hour=clock.getHours();
+            minute=clock.getMinutes();
+            second=clock.getSeconds();
+            //当时、分、秒小于10时，前面补0.
+            if (minute<10) {
+                minute="0"+minute;
+            }
+            if (second<10) {
+                second="0"+second;
+            }
+            str=hour+':'+minute+':'+second;
+            if( minute == 4 &&  second>=0 && second <=15 ) {
+                time.setAttribute("style","color: blue;font-size: 18px");
+                time.innerHTML = clock.toLocaleString();
+            }
+            else {
+                time.removeAttribute("style");
+                time.innerHTML = clock.toLocaleString();
+            }
+        },1000);
+    </script>
+
+    <h1 align="center">覃炳耀</h1>
+    <p align="center">
+        <br>集美大学在校本科生，平时以Windows10作为日常操作系统，喜欢嵌入式。
+        <br>
+        <br>关注一些开源项目，偶尔会逛一逛Github。热爱学习，同时喜欢做一些小东西。
+        <br>
+        <br>在日常的生活中也有许多的兴趣，比如音乐。
+        <br>
+        <br><img src="自拍.png" alt="别看了，是本人自拍">
+        <br>
+        <br><a href="Table.html" >来将可留姓名！</a>
+    </p>
+</body>
+</html>
